# annotree

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .treeignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
annotree/: __init__.py  __main__.py  annotree.py
scripts/: bump_version.sh
tests/: __init__.py  test_annotree.py
