# Project configuration for build, tools, and dependencies
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annotree"
version = "0.2.0"
description = "Generate annotated file tree structures with descriptions from file comments"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Sue Crumpler", email = "sue.crumpler123@gmail.com"}
]
keywords = ["tree", "directory", "structure", "documentation", "annotations", "gitignore", "treeignore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gitignore-parser>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/suecrumpler/annotree"
Documentation = "https://github.com/suecrumpler/annotree#readme"
"Bug Reports" = "https://github.com/suecrumpler/annotree/issues"
"Source" = "https://github.com/suecrumpler/annotree"

[project.scripts]
annotree = "annotree.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["annotree"]

[tool.hatch.build.targets.sdist]
include = [
    "/annotree",
    "/tests",
    "/docs",
    "README.md",
    "LICENSE",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "twine>=6.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bump-my-version>=0.26.0",
]

[tool.setuptools]
packages = ["annotree"]
